@@ -1,3 +1,7 @@
+2004-07-21  Choe Hwanjin <krisna@kldp.org>
+	* gtk_im_context_get_surrounding에서 널 포인터 체크
+	* candidate 창에서 mouse wheel event 처리
+
 2004-07-19  Choe Hwanjin <krisna@kldp.org>
 	* 한자 선택창이 뜨면 마우스와 키보드를 grab 함
 
